--- a/style.css
+++ b/style.css
@@ -6,3 +6,76 @@
 body{
     font-family: 'Roboto', sans-serif;
 }
+
+a{
+    text-decoration: none;
+    color: black;
+}
+ul{
+    list-style: none;
+}
+.header{
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
+}
+.header--img{
+    width: 40px;
+    height: 40px;
+}
+.header--nav-list{
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
+}
+.header a:hover{
+    text-decoration: underline;
+}
+.main--container_div{
+    display: flex;
+    width: 75%;
+    margin: 20px auto;
+    justify-content: space-between;
+}
+main .main--container_div .main--img{
+    width: 300px;
+    border-radius: 15px;
+    padding: 10px;
+}
+
+.main--div-info{
+    width: 55%;
+}
+.main--info-name{
+    font-size: 22px;
+    margin-bottom: 15px;
+}
+.main--description{
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+.main--links{
+    margin: 20px 0;
+}
+
+.main--link{
+    padding: 10px 20px;
+    border-radius: 15px;
+    margin: 10px 5px;
+}
+.main--links__color{
+    background-color: salmon;
+    color: white;
+}
+.main--links__transparent{
+    text-decoration: underline;
+    color: black;
+}
+.main--social-media{
+    display: flex;
+    align-items: center;
+}
+.main--social-media h2{
+    font-size: 16px;
+    margin-right: 10px;
+}
